# kdmp

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: command.rs  command_menu.rs  communication.rs  config.rs  error_menu.rs  event.rs  main.rs  option.rs  request.rs  ui.rs
client/src/daemon_ipc/: mod.rs
communication/: Cargo.toml
communication/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: main.rs  playlist.rs  request.rs  sink_thread_manager.rs
