[package]
name = "kdmp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.9", features = ["smol"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
iced_native = "0.10.3"
globwalk = "0.8.1"
communication = { path = "../communication" }
