[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rodio = { git = "https://github.com/skligys/rodio", default-features = false, features = ["symphonia-mp3"] }