[package]
name = "kdmp-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
rodio = { version = "0.17.1", default-features = false, features = ["symphonia-flac", "symphonia-mp3", "symphonia-wav"] }
serde = { version = "1.0", features = ["derive"] }
communication = { path = "../communication" }
